--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<script src="https://kit.fontawesome.com/874f25d3c2.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="demo.css" />
+	<link rel="stylesheet" href="index.css" />
 	<meta charset="UTF-8">
 	<title>preview.colorlib/</title>
 </head>
